--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,8 +1,6 @@
 .modal {
-  margin-top: 6px;
-  position: absolute;
+  margin-top: 95px;
   background-color: #fff;
-  z-index: 2;
   width: 100vw;
   height: 100vh;
 }
@@ -110,16 +108,32 @@
 }
 
 @media(min-width: 768px) {
+  .modal {
+    margin-top: 70px;
+  }
+
   .modal__section {
     padding: 20px 60px 0;
   }
 }
 
 @media(min-width: 1024px) {
+  .modal {
+    z-index: 2;
+    top: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
 
-  .modal__section {
+  .modal__wrapper {
+    position: absolute;
     border: 1px solid black;
+    background-color: #fff;
     width: 400px;
     right: 0;
+  }
+
+  .modal__section-wrapper {
+    height: 80vh;
   }
 }
