--- a/src/container/Products/Products.css
+++ b/src/container/Products/Products.css
@@ -52,15 +52,12 @@
   color: #999999;
   font-weight: 400;
   font-size: 0.8em;
+  margin-left: 10px;
 }
 
 .product__name {
   text-transform: uppercase;
   max-width: 230px;
-}
-
-.product__input[type=radio] {
-  display: none;
 }
 
 .product__price {
@@ -88,9 +85,17 @@
   margin-bottom: 8px;
 }
 
+.product__input[type=radio] {
+  display: none;
+}
+
+
+
 .product__input[type=radio] + .product__option {
   border: 1px solid black;
   display: inline-block;
+  position: relative;
+  outline: none;
   width: 34px;
   line-height: 34px;
   text-align: center;
@@ -100,8 +105,13 @@
   cursor: pointer;
   }
 
+  .product__input[type=radio]:hover + .product__option {
+    border: 1px solid wheat;
+  }
+
   .product__input[type=radio]:checked + .product__option {
     background: #1a0000;
+    border: 1px solid wheat;
     color: wheat;
   }
 
