--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
   background-color: #1a0000;
   width: 100%;
   padding: 10px;
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,4 +32,15 @@
 .footer__icons--instagram:hover {
 	color: #E1306C;
 	transition: 500ms;
+}
+
+@media(min-width: 1440px) {
+  .footer__text {
+    font-size: 1.5em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .footer__icons {
+    font-size: 1.5em;
+  }
 }
