--- a/src/container/Home/Home.css
+++ b/src/container/Home/Home.css
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   grid-auto-flow: row;
   overflow: hidden;
+  padding-top: 16px;
 }
 
 .card__link {
@@ -35,7 +36,7 @@
   position: absolute;
   font-weight: bold;
   color: #1a0000;
-  left: 10px;
+  left: 6px;
   top: 14px;
 }
 
@@ -57,6 +58,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 0px 40px -1px rgb(245, 187, 79) inset;
 }
 
 .card__title {
@@ -74,29 +76,66 @@
   color: #999;
   font-size: 0.7em;
   text-decoration: line-through;
+  margin-right: 10px;
 }
 
 
 @media(min-width: 760px) {
-.card__link {
-  box-shadow: initial;
-  transition: transform 2000ms;
-  height: fit-content;
+  .card__link {
+    box-shadow: initial;
+    transition: transform 2000ms;
+    height: fit-content;
+  }
+
+  .card:focus-within .card__link,
+  .card:hover .card__link {
+    transform: translateX(-8%)
+  }
+
+  .card__link:focus ~ .card__link,
+  .card__link:hover ~.card__link {
+    transform: translateX(8%)
+  }
+
+  .card .card__link:focus,
+  .card .card__link:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 2px 6px #999999;
+  }
 }
 
-.card:focus-within .card__link,
-.card:hover .card__link {
-  transform: translateX(-8%)
-}
+@media(min-width: 1440px) {
+  .card {
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding-top: 26px;
+  }
 
-.card__link:focus ~ .card__link,
-.card__link:hover ~.card__link {
-  transform: translateX(8%)
-}
+  .card__tag {
+    font-size: 4em;
+  }
 
-.card .card__link:focus,
-.card .card__link:hover {
-  transform: scale(1.1);
-  box-shadow: 0px 2px 6px #999999;
-}
+  .card__deal {
+    font-weight: bold;
+    font-size: 1.2em;
+    top: 18px;
+  }
+
+  .card__footer {
+    height: 90px;
+    padding: 8px;
+  }
+
+  .card__title {
+    font-size: 1.4em;
+    margin-bottom: 4px;
+  }
+
+  .card__price {
+    font-size: 1.4em;
+  }
+
+  .card__price--discount {
+    font-size: 0.9em;
+  }
 }
