--- a/src/container/Home/Home.css
+++ b/src/container/Home/Home.css
@@ -99,8 +99,9 @@
 
   .card .card__link:focus,
   .card .card__link:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
     box-shadow: 0px 2px 6px #999999;
+    z-index: 2;
   }
 }
 
